--- a/index.html
+++ b/index.html
@@ -1,1 +1,72 @@
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+
+<head>
+  <meta charset="utf-8">
+  <title>Vasyl Semak</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="images/favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
+</head>
+
+<body>
+
+  <div class="top-container">
+    <img class="first-cloud" src="images/cloud.png" alt="cloud image">
+    <h1>I'm Vasyl.</h1>
+    <h2><span class="span-programer">a <span class="span-pro">pro</span></pre>grammer.</span></h2>
+    <img class="second-cloud" src="images/cloud.png" alt="cloud image">
+    <img src="images/mountain.png" alt="mountain image">
+  </div>
+
+  <div class="middle-container">
+    <div class="profile">
+      <img class="ImgVasyl" src="images/imageVasyl.jpg" alt="Vasyl's image">
+      <h2>Hello :))</h2>
+      <p class="hello-paragraph" >
+        I'm a web/software developer based in Brooklyn, NY. I have a passion for development and love to create
+         for web and mobile devices.
+      </p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills</h2>
+      <div class="skill-row">
+        <img class="coding-image" src="images\coding.png" alt="Coding Logo ">
+        <h3>Development and Design.</h3>
+        <p>
+          I'm a developer, so I know how to create your website to run across devices using the latest
+           technologies available, make it user "super-friendly, readable and well-functional.
+        </p>
+      </div>
+      <div class="skill-row">
+        <img class="finance-image" src="images\banking.png" alt="HTML Logo">
+        <h3>I used to work in a bank.</h3>
+        <p>
+          I have financial, analytical, math skills in order to synthesize various data for appropriate
+           decision making.
+        </p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3 class="h3-contact-me">I’m currently available for hire.</h3>
+      <p>
+        If you have a project that you want to get started, think you need my help with something or
+         just fancy saying hey, then get in touch.
+      </p>
+      <a class="btn" href="mailto:vasylsmk1401@gmail.com">CONTACT ME</a>
+    </div>
+  </div>
+
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.facebook.com/vasyl.semak">Facebook</a>
+    <a class="footer-link" href="https://vasylsemak.github.io/CV/">Website</a>
+    <p class="paragraph-footer" >© 2019 Vasyl Semak. All rights reserved.</p>
+  </div>
+
+</body>
+
+</html>
 
