--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
   <div class="bottom-container">
     <a class="footer-link" href="https://www.facebook.com/vasyl.semak">Facebook</a>
-    <a class="footer-link" href="https://vasylsemak.github.io/CV/">Website</a>
+    <a class="footer-link" href="https://github.com/vasylsemak">Github</a>
     <p class="paragraph-footer" >© 2019 Vasyl Semak. All rights reserved.</p>
   </div>
 
