--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
   <meta charset="utf-8">
   <title>Vasyl Semak</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" href="images/favicon.ico">
+  <link rel="icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
   <div class="top-container">
-    <img class="first-cloud" src="images/cloud.png" alt="cloud image">
+    <img class="first-cloud" src="cloud.png" alt="cloud image">
     <h1>I'm Vasyl.</h1>
     <h2><span class="span-programer">a <span class="span-pro">pro</span></pre>grammer.</span></h2>
-    <img class="second-cloud" src="images/cloud.png" alt="cloud image">
-    <img src="images/mountain.png" alt="mountain image">
+    <img class="second-cloud" src="cloud.png" alt="cloud image">
+    <img src="mountain.png" alt="mountain image">
   </div>
 
   <div class="middle-container">
     <div class="profile">
-      <img class="ImgVasyl" src="images/imageVasyl.jpg" alt="Vasyl's image">
+      <img class="ImgVasyl" src="imageVasyl.jpg" alt="Vasyl's image">
       <h2>Hello :))</h2>
       <p class="hello-paragraph" >
         I'm a web/software developer based in Brooklyn, NY. I have a passion for development and love to create
@@ -32,7 +32,7 @@
     <div class="skills">
       <h2>My Skills</h2>
       <div class="skill-row">
-        <img class="coding-image" src="images\coding.png" alt="Coding Logo ">
+        <img class="coding-image" src="coding.png" alt="Coding Logo ">
         <h3>Development and Design.</h3>
         <p>
           I'm a developer, so I know how to create your website to run across devices using the latest
@@ -40,7 +40,7 @@
         </p>
       </div>
       <div class="skill-row">
-        <img class="finance-image" src="images\banking.png" alt="HTML Logo">
+        <img class="finance-image" src="banking.png" alt="Finance Logo">
         <h3>I used to work in a bank.</h3>
         <p>
           I have financial, analytical, math skills in order to synthesize various data for appropriate
