--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
   </div>
 
   <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/in/vasylsemak">LinkedIn</a>
     <a class="footer-link" href="https://www.facebook.com/vasyl.semak">Facebook</a>
     <a class="footer-link" href="https://github.com/vasylsemak">Github</a>
     <p class="paragraph-footer" >© 2020 Vasyl Semak. All rights reserved.</p>
